Skip to content

VLC 2.1 Nighties, Volume Control Not responding, last working 2012-05-16

Right now VLC's Volume control isn't working at all (latest Build).... :(

mouse-over the visual interface control lower right corner typically... unresponsive going up or down the volume spectrum... ie no real change in volume... :(

No response from Scroll-wheel on mouse, either.

Keyboard shortcuts, Crtl+UP/Down, no response in normal or Full Screen

My System Specs:

WinXP Pro 32bit, 
4GB Ram(800Mhz DDR2)(3GB usable) 
Nvidia GeForce GTS 250 512MB 
Nvidia Drivers, v296.10
Asus P5NSLI v2, BIOS r1801)

Just grabbed the latest Nightly VLC Media Player Build (32bit), VLC 2.1.0-git-20120521-0037 Rincewind

VLC's Volume control is still non-functional....

I believe the last version I used before the 05-17-2012 build that worked in regards to this volume control issue was vlc-2.1.0-git-20120514-2228-win32

CONFIRMED ^_^ I downloaded a zip archive from, http://nightlies.videolan.org/build/win32/ vlc-2.1.0-git-20120514-2228-win32 Volume Control does Work ^_^

Ok(aka working)   -- [vlc-2.1.0-git-20120514-2228-win32]
Ok(aka working)   -- [vlc-2.1.0-git-20120515-0006-win32]
Ok(aka working)   -- [vlc-2.1.0-git-20120516-0006-win32][16-May-2012 00:57]
Fail, Not Working -- [vlc-2.1.0-git-20120517-0004-win32][17-May-2012 00:56]

based on build-bot info, build 1207 and/or build 1208, at least anywhere after Build 1201: http://buildbot.videolan.org/builders/i386-win32/builds/1208

Wed 16 May 2012 21:25:44
Start	[Wed May 16 21:27:04 2012]
End  	[Wed May 16 21:36:54 2012]
Changed files :: {modules/audio_output/directx.c}
DirectSound: apply volume attenuation with DirectSound

http://buildbot.videolan.org/builders/i386-win32/builds/1207

Wed 16 May 2012 20:49:03
Start [Wed May 16 20:52:29 2012]
End	  [Wed May 16 20:59:13 2012]
wasapi: volume setting support
Changed files :: {modules/audio_output/wasapi.c}

PS: sorry I started a new Ticket as the other one was about volume control crashes... I didn't have any crashes just non functional volume control. plus I wanted to make sure it got seen ASAP... :) I am happy I could help spent the last few hours tracking down and trying nighties lol

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information