Direct Aout: try to fix unresonspiveness of volume change

Ref #6858